2008-10-23  Marcus Brinkmann  <marcus@g10code.de>

	* patches/claws-mail-3.1.0cvs70/01-w32-logo.patch,
	patches/claws-mail-3.1.0cvs70/02-w32-icon.patch,
	patches/claws-mail-3.1.0cvs70/03-smime-plugin.patch,
	patches/claws-mail-3.1.0cvs70/99-auto.patch,
	patches/claws-mail-3.4.0/01-w32-logo.patch,
	patches/claws-mail-3.4.0/02-w32-icon.patch,
	patches/claws-mail-3.4.0/03-smime-plugin.patch,
	patches/claws-mail-3.4.0/04-gnutls.patch,
	patches/claws-mail-3.4.0/99-auto.patch,
	patches/claws-mail-3.5.0cvs114/01-gtk-input-add.patch,
	patches/claws-mail-3.5.0cvs114/02-pgpcore.patch,
	patches/claws-mail-3.5.0cvs114/03-smime.patch,
	patches/claws-mail-3.5.0cvs114/99-auto.patch: Removed.
	* Makefile.am (EXTRA_DIST): Remove all these claws patches.

	* patches/gpgme-1.1.7/02-extern-umlaute.patch: New file.
	* Makefile.am (EXTRA_DIST): Add it here.

2008-10-23  Marcus Brinkmann  <marcus@g10code.com>

	* packages/packages.current: Update libtasn1, libgsasl, gnutls.
	Remove opencdk, which is now included in gnutls.
	* include/config.nsi.in: Remove opencdk support.
	* src/inst-sections.nsi: Likewise.
	* src/Makefile.in (gpg4win_spkgs, EXTRA_DIST): Remove opencdk.
	* src/inst-opencdk.nsi, src/uninst-opencdk.nsi: Removed.

2008-10-22  Emanuel Schuetze  <emanuel.schuetze@intevation.de>

	* configure.ac: Change COMPENDIUM_DATE_DE for 
	compendium 3.0.0-beta1 release.

2008-10-21  Marcus Brinkmann  <marcus@g10code.com>

	* src/installer-finish.nsi (no_quick_launch_uninstall): Remove
	startup menu documentation directory.

2008-10-20  Marcus Brinkmann  <marcus@g10code.com>

	* Makefile.am (EXTRA_DIST): Add gpgme-1.1.7/01-registry.patch.

2008-10-20  Marcus Brinkmann  <marcus@g10code.com>

	* packages/packages.current: Fix gpgme location.

2008-10-17  Marcus Brinkmann  <marcus@g10code.com>

	* packages/packages.current: Update w32pth.

	* packages/packages.current: Update gpgme.

2008-10-07  Marcus Brinkmann  <marcus@g10code.com>

	Release 1.9.8-beta.
