@@ -1,3 +1,8 @@
+2008-10-23  Marcus Brinkmann  <marcus@ulysses.g10code.com>
+
+	* src/Makefile.am (gpg4win_pkg_libgpg_error_post_install): New
+	macro to convert PO files.
+
 2008-10-23  Marcus Brinkmann  <marcus@g10code.de>
 
 	* patches/claws-mail-3.1.0cvs70/01-w32-logo.patch,
